# sqlite-todo

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md
src/: add_command.cc  add_command.hh  command.hh  commands.hh  done_command.cc  done_command.hh  help_command.cc  help_command.hh  iterator.hh  list_command.cc  list_command.hh  program.cc  reset_command.cc  reset_command.hh  store_error.hh  todo.hh  todo_iterator.hh  todo_store.cc  todo_store.hh
